docs/2.1.2/_sources/citing.rst.txt
###########
Citing GWpy
###########

If you have used GWpy as part of a project that leads to a scientific
publication, please acknowledge this by citing the
`GWpy paper <https://www.sciencedirect.com/science/article/pii/S2352711021000029>`_: D. M. Macleod *et al*, SoftwareX, **13**, 100657 (2021). The citation in various formats is given below:

.. tabbed:: BibTeX

   .. code-block:: bibtex

      @article{gwpy,
          title = "{GWpy: A Python package for gravitational-wave astrophysics}",
         author = {{Macleod}, D.~M. and {Areeda}, J.~S. and {Coughlin}, S.~B. and {Massinger}, T.~J. and {Urban}, A.~L.},
        journal = {SoftwareX},
         volume = 13,
          pages = 100657,
           year = 2021,
           issn = {2352-7110},
            doi = {10.1016/j.softx.2021.100657},
            url = {https://www.sciencedirect.com/science/article/pii/S2352711021000029},
      }

.. tabbed:: RIS

   .. code-block::

      TY  - JOUR
      T1  - GWpy: A Python package for gravitational-wave astrophysics
      AU  - Macleod, Duncan M.
      AU  - Areeda, Joseph S.
      AU  - Coughlin, Scott B.
      AU  - Massinger, Thomas J.
      AU  - Urban, Alexander L.
      JO  - SoftwareX
      VL  - 13
      SP  - 100657
      PY  - 2021
      DA  - 2021/01/01/
      SN  - 2352-7110
      DO  - 10.1016/j.softx.2021.100657
      UR  - https://www.sciencedirect.com/science/article/pii/S2352711021000029
      ER  - 

.. tabbed:: EndNode

   .. code-block::

      %0 Journal Article
      %T GWpy: A Python package for gravitational-wave astrophysics
      %A Macleod, Duncan M.
      %A Areeda, Joseph S.
      %A Coughlin, Scott B.
      %A Massinger, Thomas J.
      %A Urban, Alexander L.
      %J SoftwareX
      %V 13
      %P 100657
      %D 2021
      %R 10.1016/j.softx.2021.100657
      %@ 2352-7110

.. tabbed:: RefWorks

   .. code-block::

      RT Journal
      T1 GWpy: A Python package for gravitational-wave astrophysics
      A1 Macleod, Duncan M.
      A1 Areeda, Joseph S.
      A1 Coughlin, Scott B.
      A1 Massinger, Thomas J.
      A1 Urban, Alexander L.
      JF SoftwareX
      VO 13
      SP 100657
      YR 2021
      DO DOI: 10.1016/j.softx.2021.100657
      SN 2352-7110

Also cite the DOI for the version of GWpy that you have used.
Each of the DOIs below resolves a Zenodo record for that version.
See the *Export* section on each page for formatted citations in a number
of common styles.

The list below includes only the 10 most recent releases of GWpy.
For older versions, please
`click here <https://zenodo.org//search?page=2&size=10&q=conceptrecid:"597016"&sort=-version&all_versions=True>`__.

-----
2.1.2
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.5726803.svg
   :target: https://doi.org/10.5281/zenodo.5726803

-----
2.1.1
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.5575568.svg
   :target: https://doi.org/10.5281/zenodo.5575568

-----
2.1.0
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.5336314.svg
   :target: https://doi.org/10.5281/zenodo.5336314

-----
2.0.4
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.4723317.svg
   :target: https://doi.org/10.5281/zenodo.4723317

-----
2.0.3
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.4694460.svg
   :target: https://doi.org/10.5281/zenodo.4694460

-----
2.0.2
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.4301851.svg
   :target: https://doi.org/10.5281/zenodo.4301851

-----
2.0.1
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.3973364.svg
   :target: https://doi.org/10.5281/zenodo.3973364

-----
2.0.0
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.3964419.svg
   :target: https://doi.org/10.5281/zenodo.3964419

-----
1.0.1
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.3598469.svg
   :target: https://doi.org/10.5281/zenodo.3598469

-----
1.0.0
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.3522047.svg
   :target: https://doi.org/10.5281/zenodo.3522047