docs/3.0.8/_sources/citing.rst.txt
###########
Citing GWpy
###########

If you have used GWpy as part of a project that leads to a scientific
publication, please acknowledge this by citing the
`GWpy paper <https://www.sciencedirect.com/science/article/pii/S2352711021000029>`_: D. M. Macleod *et al*, SoftwareX, **13**, 100657 (2021). The citation in various formats is given below:

.. md-tab-set::
    :name: gwpy_citation_examples

    .. md-tab-item:: BibTeX

        .. code-block:: bibtex

            @article{gwpy,
                title = "{GWpy: A Python package for gravitational-wave astrophysics}",
               author = {{Macleod}, D.~M. and {Areeda}, J.~S. and {Coughlin}, S.~B. and {Massinger}, T.~J. and {Urban}, A.~L.},
              journal = {SoftwareX},
               volume = 13,
                pages = 100657,
                 year = 2021,
                 issn = {2352-7110},
                  doi = {10.1016/j.softx.2021.100657},
                  url = {https://www.sciencedirect.com/science/article/pii/S2352711021000029},
            }

    .. md-tab-item:: RIS

        .. code-block::

            TY  - JOUR
            T1  - GWpy: A Python package for gravitational-wave astrophysics
            AU  - Macleod, Duncan M.
            AU  - Areeda, Joseph S.
            AU  - Coughlin, Scott B.
            AU  - Massinger, Thomas J.
            AU  - Urban, Alexander L.
            JO  - SoftwareX
            VL  - 13
            SP  - 100657
            PY  - 2021
            DA  - 2021/01/01/
            SN  - 2352-7110
            DO  - 10.1016/j.softx.2021.100657
            UR  - https://www.sciencedirect.com/science/article/pii/S2352711021000029
            ER  - 

    .. md-tab-item:: EndNode

         .. code-block::

            %0 Journal Article
            %T GWpy: A Python package for gravitational-wave astrophysics
            %A Macleod, Duncan M.
            %A Areeda, Joseph S.
            %A Coughlin, Scott B.
            %A Massinger, Thomas J.
            %A Urban, Alexander L.
            %J SoftwareX
            %V 13
            %P 100657
            %D 2021
            %R 10.1016/j.softx.2021.100657
            %@ 2352-7110

    .. md-tab-item:: RefWorks

        .. code-block::

            RT Journal
            T1 GWpy: A Python package for gravitational-wave astrophysics
            A1 Macleod, Duncan M.
            A1 Areeda, Joseph S.
            A1 Coughlin, Scott B.
            A1 Massinger, Thomas J.
            A1 Urban, Alexander L.
            JF SoftwareX
            VO 13
            SP 100657
            YR 2021
            DO DOI: 10.1016/j.softx.2021.100657
            SN 2352-7110

Also cite the DOI for the version of GWpy that you have used.
Each of the DOIs below resolves a Zenodo record for that version.
See the *Export* section on each page for formatted citations in a number
of common styles.

The list below includes only the 10 most recent releases of GWpy.
For older versions, please
`click here <https://zenodo.org//search?page=2&size=10&q=conceptrecid:"597016"&sort=-version&all_versions=True>`__.

-----
3.0.8
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.846265.svg
    :alt: gwpy/gwpy: GWpy 3.0.8 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.846265

-----
3.0.7
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.8409995.svg
    :alt: gwpy/gwpy: GWpy 3.0.7 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.8409995

-----
3.0.6
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.8409892.svg
    :alt: gwpy/gwpy: GWpy 3.0.6 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.8409892

-----
3.0.5
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.7997251.svg
    :alt: gwpy/gwpy: GWpy 3.0.5 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.7997251

-----
3.0.4
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.7821575.svg
    :alt: gwpy/gwpy: GWpy 3.0.4 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.7821575

-----
3.0.3
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.7811893.svg
    :alt: gwpy/gwpy: GWpy 3.0.3 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.7811893

-----
3.0.2
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.7356825.svg
    :alt: gwpy/gwpy: GWpy 3.0.2 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.7356825

-----
3.0.1
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.7305083.svg
    :alt: gwpy/gwpy: GWpy 3.0.1 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.7305083

-----
3.0.0
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.7142600.svg
    :alt: gwpy/gwpy: GWpy 3.0.0 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.7142600

-----
2.1.5
-----

.. image:: https://zenodo.org/badge/doi/10.5281/zenodo.6948858.svg
    :alt: gwpy/gwpy: GWpy 2.1.5 Zenodo DOI badge
    :target: https://doi.org/10.5281/zenodo.6948858